--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@apollo/client": "^3.7.0",
     "@faceless-ui/css-grid": "^1.2.0",
     "@faceless-ui/modal": "^2.0.2",
-    "@payloadcms/db-mongodb": "latest",
+    "@payloadcms/db-postgres": "^3.31.0",
     "@payloadcms/next": "latest",
     "@payloadcms/plugin-cloud": "latest",
     "@payloadcms/plugin-form-builder": "latest",
@@ -27,6 +27,7 @@
     "graphql": "^16.9.0",
     "next": "^15.2.3",
     "payload": "latest",
+    "pg": "^8.11.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.41.0",
