Updated DB to Neon

--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "@apollo/client": "^3.7.0",
     "@faceless-ui/css-grid": "^1.2.0",
     "@faceless-ui/modal": "^2.0.2",
-    "@payloadcms/db-postgres": "^3.31.0",
+    "@neondatabase/serverless": "^1.0.0",
+    "@payloadcms/db-sqlite": "^3.31.0",
     "@payloadcms/next": "latest",
     "@payloadcms/plugin-cloud": "latest",
     "@payloadcms/plugin-form-builder": "latest",
     "@payloadcms/richtext-lexical": "latest",
+    "@vercel/edge-config": "^1.4.0",
     "cross-env": "^7.0.3",
     "graphql": "^16.9.0",
     "next": "^15.2.3",
     "payload": "latest",
-    "pg": "^8.11.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.41.0",
