--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URI=mongodb://127.0.0.1/payload-form-builder-example
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+DATABASE_URI=file:./database.sqlite
+PAYLOAD_SECRET=af3919c745868f93e98a4c228427827f
 NEXT_PUBLIC_PAYLOAD_URL=http://localhost:3000
