--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "framework": "nextjs",
   "outputDirectory": ".next",
   "env": {
-    "DATABASE_URL": "postgres://neondb_owner:npg_vHoPN8OC1nUF@ep-tight-wind-a6i4u8n9-pooler.us-west-2.aws.neon.tech/neondb?sslmode=require"
+    "DATABASE_URL": "postgres://neondb_owner:npg_vHoPN8OC1nUF@ep-tight-wind-a6i4u8n9-pooler.us-west-2.aws.neon.tech/neondb?sslmode=require",
+    "PAYLOAD_SECRET": "your-payload-secret-key-984578345793"
   }
 }
